namespace PlayerSystem.StateAnimation
{
    public class DictionaryAnimState
    {
        public const string STR_PUT_DOWN = "PutDown";
        public const string STR_PUT_UP = "PutUp";
        public const string STR_WIN_GAME = "DancesWinGame";
        public const string STR_GAME_OVER = "DancesGameOver";
    }
}